tests/fail/pipeline/imported_global_namespace/main.kira
import UI as Kit

/// Qualified imported documentation.
Widget DashboardShell() {
    content {
        Card("Global")
        Kit.Card("Qualified")
    }

    onAppear() {
        return;
    }
}

@Main
function entry() {
    return;
}
